--- a/index.html
+++ b/index.html
@@ -8,29 +8,35 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Catherine's Favorite Things</title>
 </head>
+
 <body>
 
     <h1>Catherine's Favorite Things</h1>
     <img src="assets/margarita.jpg" alt="Margarita">
     <p>Heres a list of things I like </p>
-    
-<ul> 
-  <li>Horror Movies</li>
-  <li>Margaritas</li>
-  <li>Tv, Film, and reading</li>
-</ul>
+
+    <ul>
+        <li>Horror Movies</li>
+        <li>Margaritas</li>
+        <li>Tv, Film, and reading</li>
+    </ul>
 
 
-<p>My two favorite genres are horror and comedy. I like to watch either of those genres on film or tv while I drink wine and snack on chips and queso.I also I love taking long showers, and other forms of self care. I enjoy fine dinning and also getting take out and watching tv or a movie while I eat. I love planning trips and traveling. I also like reading horror and fantasy books.</p>
+    <p>My two favorite genres are horror and comedy. I like to watch either of those genres on film or tv while I drink
+        wine and snack on chips and queso.I also I love taking long showers, and other forms of self care. I enjoy fine
+        dinning and also getting take out and watching tv or a movie while I eat. I love planning trips and traveling. I
+        also like reading horror and fantasy books.</p>
 
-<p>I visit this site <a href="https://www.imdb.com">IMDB</a> to learn about directors, actors, actresses, and other filmography.</p>
+    <p>I visit this site <a href="https://www.imdb.com">IMDB</a> to learn about directors, actors, actresses, and other
+        filmography.</p>
 </body>
+
 </html>
 
 
-
-    <script src="script.js"></script>
-    <!-- // Note: The reason the the script element near the bottom of the HTML file is that the browser reads code in the order it appears in the file. -->
+<button>Change user</button>
+<script src="script.js"></script>
+<!-- // Note: The reason the the script element near the bottom of the HTML file is that the browser reads code in the order it appears in the file. -->
 </body>
 
 </html>
